lang/parsing/parser.output

state 0
	$accept: .spec $end 

	DATA  shift 10
	CONST  shift 12
	MODULE  shift 11
	PROC  shift 13
	FAULT  shift 14
	INIT  shift 15
	LTL  shift 16
	.  error

	spec  goto 1
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	fault_def  goto 7
	init_block  goto 8
	ltl_spec  goto 9

state 1
	$accept:  spec.$end 

	$end  accept
	.  error


state 2
	spec:  toplevel_body.    (1)
	spec:  toplevel_body.spec 

	DATA  shift 10
	CONST  shift 12
	MODULE  shift 11
	PROC  shift 13
	FAULT  shift 14
	INIT  shift 15
	LTL  shift 16
	.  reduce 1 (src line 147)

	spec  goto 17
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	fault_def  goto 7
	init_block  goto 8
	ltl_spec  goto 9

state 3
	toplevel_body:  data_def.    (3)

	.  reduce 3 (src line 162)


state 4
	toplevel_body:  module_def.    (4)

	.  reduce 4 (src line 164)


state 5
	toplevel_body:  const_def.    (5)

	.  reduce 5 (src line 165)


state 6
	toplevel_body:  proc_def.    (6)

	.  reduce 6 (src line 166)


state 7
	toplevel_body:  fault_def.    (7)

	.  reduce 7 (src line 167)


state 8
	toplevel_body:  init_block.    (8)

	.  reduce 8 (src line 168)


state 9
	toplevel_body:  ltl_spec.    (9)

	.  reduce 9 (src line 169)


state 10
	data_def:  DATA.IDENTIFIER { idents_one } ; 

	IDENTIFIER  shift 18
	.  error


state 11
	module_def:  MODULE.IDENTIFIER ( parameters_zero ) { module_body_zero } ; 

	IDENTIFIER  shift 19
	.  error


state 12
	const_def:  CONST.IDENTIFIER type ASSIGN expr ; 

	IDENTIFIER  shift 20
	.  error


state 13
	proc_def:  PROC.IDENTIFIER ( parameters_zero ) { statements_zero } ; 

	IDENTIFIER  shift 21
	.  error


state 14
	fault_def:  FAULT.SEND ( parameters_one ) tag { statements_zero } ; 
	fault_def:  FAULT.RECV ( parameters_one ) tag { statements_zero } ; 
	fault_def:  FAULT.BLOCK tag { statements_zero } ; 

	RECV  shift 23
	BLOCK  shift 24
	SEND  shift 22
	.  error


state 15
	init_block:  INIT.{ initvars_zero } ; 

	{  shift 25
	.  error


state 16
	ltl_spec:  LTL.{ ltl_expr ; } ; 
	ltl_spec:  LTL.{ ltl_expr } ; 

	{  shift 26
	.  error


state 17
	spec:  toplevel_body spec.    (2)

	.  reduce 2 (src line 154)


state 18
	data_def:  DATA IDENTIFIER.{ idents_one } ; 

	{  shift 27
	.  error


state 19
	module_def:  MODULE IDENTIFIER.( parameters_zero ) { module_body_zero } ; 

	(  shift 28
	.  error


state 20
	const_def:  CONST IDENTIFIER.type ASSIGN expr ; 

	IDENTIFIER  shift 30
	CHANNEL  shift 32
	[  shift 31
	.  error

	type  goto 29

state 21
	proc_def:  PROC IDENTIFIER.( parameters_zero ) { statements_zero } ; 

	(  shift 33
	.  error


state 22
	fault_def:  FAULT SEND.( parameters_one ) tag { statements_zero } ; 

	(  shift 34
	.  error


state 23
	fault_def:  FAULT RECV.( parameters_one ) tag { statements_zero } ; 

	(  shift 35
	.  error


state 24
	fault_def:  FAULT BLOCK.tag { statements_zero } ; 

	@  shift 37
	.  error

	tag  goto 36

state 25
	init_block:  INIT {.initvars_zero } ; 
	initvars_zero: .    (25)

	IDENTIFIER  shift 41
	.  reduce 25 (src line 240)

	initvars_zero  goto 38
	initvars_one  goto 39
	initvar  goto 40

state 26
	ltl_spec:  LTL {.ltl_expr ; } ; 
	ltl_spec:  LTL {.ltl_expr } ; 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 42
	ltl_atom  goto 43

state 27
	data_def:  DATA IDENTIFIER {.idents_one } ; 

	IDENTIFIER  shift 55
	.  error

	idents_one  goto 54

state 28
	module_def:  MODULE IDENTIFIER (.parameters_zero ) { module_body_zero } ; 
	parameters_zero: .    (119)

	IDENTIFIER  shift 59
	.  reduce 119 (src line 634)

	parameters_zero  goto 56
	parameters_one  goto 57
	parameter  goto 58

state 29
	const_def:  CONST IDENTIFIER type.ASSIGN expr ; 

	ASSIGN  shift 60
	.  error


state 30
	type:  IDENTIFIER.    (131)

	.  reduce 131 (src line 692)


state 31
	type:  [.] type 

	]  shift 61
	.  error


state 32
	type:  CHANNEL.{ types_one } 
	type:  CHANNEL.[ ] { types_one } 
	type:  CHANNEL.[ expr ] { types_one } 

	{  shift 62
	[  shift 63
	.  error


state 33
	proc_def:  PROC IDENTIFIER (.parameters_zero ) { statements_zero } ; 
	parameters_zero: .    (119)

	IDENTIFIER  shift 59
	.  reduce 119 (src line 634)

	parameters_zero  goto 64
	parameters_one  goto 57
	parameter  goto 58

state 34
	fault_def:  FAULT SEND (.parameters_one ) tag { statements_zero } ; 

	IDENTIFIER  shift 59
	.  error

	parameters_one  goto 65
	parameter  goto 58

state 35
	fault_def:  FAULT RECV (.parameters_one ) tag { statements_zero } ; 

	IDENTIFIER  shift 59
	.  error

	parameters_one  goto 66
	parameter  goto 58

state 36
	fault_def:  FAULT BLOCK tag.{ statements_zero } ; 

	{  shift 67
	.  error


state 37
	tag:  @.IDENTIFIER 

	IDENTIFIER  shift 68
	.  error


state 38
	init_block:  INIT { initvars_zero.} ; 

	}  shift 69
	.  error


state 39
	initvars_zero:  initvars_one.    (26)

	.  reduce 26 (src line 245)


state 40
	initvars_one:  initvar.    (27)
	initvars_one:  initvar., 
	initvars_one:  initvar., initvars_one 

	,  shift 70
	.  reduce 27 (src line 250)


state 41
	initvar:  IDENTIFIER.: type tags_zero 
	initvar:  IDENTIFIER.: IDENTIFIER ( arguments_one ) tags_zero 

	:  shift 71
	.  error


state 42
	ltl_spec:  LTL { ltl_expr.; } ; 
	ltl_spec:  LTL { ltl_expr.} ; 
	ltl_expr:  ltl_expr.LAND ltl_expr 
	ltl_expr:  ltl_expr.LOR ltl_expr 
	ltl_expr:  ltl_expr.XOR ltl_expr 
	ltl_expr:  ltl_expr.THEN ltl_expr 
	ltl_expr:  ltl_expr.EQL ltl_expr 
	ltl_expr:  ltl_expr.NEQ ltl_expr 
	ltl_expr:  ltl_expr.U ltl_expr 
	ltl_expr:  ltl_expr.V ltl_expr 
	ltl_expr:  ltl_expr.S ltl_expr 
	ltl_expr:  ltl_expr.T ltl_expr 

	XOR  shift 76
	LAND  shift 74
	LOR  shift 75
	EQL  shift 78
	NEQ  shift 79
	THEN  shift 77
	}  shift 73
	;  shift 72
	U  shift 80
	V  shift 81
	S  shift 82
	T  shift 83
	.  error


state 43
	ltl_expr:  ltl_atom.    (94)

	.  reduce 94 (src line 528)


state 44
	ltl_expr:  (.ltl_expr ) 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 84
	ltl_atom  goto 43

state 45
	ltl_expr:  NOT.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 85
	ltl_atom  goto 43

state 46
	ltl_expr:  X.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 86
	ltl_atom  goto 43

state 47
	ltl_expr:  G.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 87
	ltl_atom  goto 43

state 48
	ltl_expr:  F.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 88
	ltl_atom  goto 43

state 49
	ltl_expr:  Y.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 89
	ltl_atom  goto 43

state 50
	ltl_expr:  Z.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 90
	ltl_atom  goto 43

state 51
	ltl_expr:  H.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 91
	ltl_atom  goto 43

state 52
	ltl_expr:  O.ltl_expr 

	IDENTIFIER  shift 53
	NOT  shift 45
	(  shift 44
	X  shift 46
	G  shift 47
	F  shift 48
	Y  shift 49
	Z  shift 50
	H  shift 51
	O  shift 52
	.  error

	ltl_expr  goto 92
	ltl_atom  goto 43

state 53
	ltl_atom:  IDENTIFIER.    (114)
	ltl_atom:  IDENTIFIER.. ltl_atom 

	.  shift 93
	.  reduce 114 (src line 609)


state 54
	data_def:  DATA IDENTIFIER { idents_one.} ; 

	}  shift 94
	.  error


state 55
	idents_one:  IDENTIFIER.    (116)
	idents_one:  IDENTIFIER., 
	idents_one:  IDENTIFIER., idents_one 

	,  shift 95
	.  reduce 116 (src line 620)

